<resources>
    <string name="app_name">Contact Database</string>
    <string name="toolbar_title">My Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="placeholder_name">Contact Name</string>
    <string name="placeholder_phone">Phone Number</string>
    <string name="toast_add_clicked">Add contact clicked</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="error_empty_fields">Please fill in all fields</string>
    <string name="contact_saved">Contact saved</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="confirm_delete">Are you sure you want to delete this contact?</string>
    <string name="cancel">Cancel</string>
</resources>